--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-expo-viewport-units": "^0.0.8",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-viewport-units": "^0.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
