--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-viewport-units": "^0.0.5"
+    "react-native-viewport-units": "^0.0.5",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
