--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.1",
     "expo": "~49.0.7",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
