--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-viewport-units": "^0.0.5",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
