--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-dotenv": "^3.4.9",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-dotenv": "^0.2.2",
     "typescript": "^5.1.3"
   },
   "private": true
