--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@react-navigation/stack": "^6.3.17",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
     "expo": "~49.0.7",
+    "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -30,8 +31,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-viewport-units": "^0.0.5",
     "react-navigation": "^4.4.4",
-    "react-query": "^3.39.3",
-    "expo-checkbox": "~2.4.0"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
