--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-viewport-units": "^0.0.5",
     "react-navigation": "^4.4.4",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
