--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -25,10 +27,13 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
     "react-native-expo-viewport-units": "^0.0.8",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "^14.0.0",
     "react-native-viewport-units": "^0.0.5",
     "react-navigation": "^4.4.4",
     "react-query": "^3.39.3",
