--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
